--- a/rootdir/init.device.rc
+++ b/rootdir/init.device.rc
@@ -4,6 +4,10 @@ on boot
     chmod 660 /sys/class/leds/wled:backlight/brightness
 
     # PM8941 flash
+    chmod 0666 /sys/class/misc/pm8941-flash/device/current1
+    chmod 0666 /sys/class/misc/pm8941-flash/device/current2
+    chmod 0666 /sys/class/misc/pm8941-flash/device/mode
+    
     chown system camera /sys/class/misc/pm8941-flash/device/current1
     chown system camera /sys/class/misc/pm8941-flash/device/current2
     chown system camera /sys/class/misc/pm8941-flash/device/fault_status
